fix: header icon mobile

--- a/src/elements/header/index.module.scss
+++ b/src/elements/header/index.module.scss
@@ -27,7 +27,6 @@
       height: 100%;
       display: flex;
       align-items: center;
-      width: 100%;
       img {
         height: 65%;
       }
